# aqms

./: .gitignore  main.py  pyproject.toml
cw/task2/: Anonymised_data_cw.ipynb  Anonymised_data_solution.ipynb  anon_data.csv
cw/task3/: rolling_currency_futures_cw.ipynb  rolling_currency_futures_solution.ipynb
data/equity/options/: chain_summary.csv
data/equity/options/AAPL_US_Equity/: metadata.csv
data/equity/options/AMZN_US_Equity/: metadata.csv
data/equity/options/META_US_Equity/: metadata.csv
data/equity/options/NVDA_US_Equity/: metadata.csv
data/equity/options/QQQ_US_Equity/: metadata.csv
data/equity/options/TSLA_US_Equity/: metadata.csv
supp/: Bloomberg_Bond_Futures_Option_Chains.ipynb  Bloomberg_Data_Extraction.ipynb  smoothing_methods.ipynb
supp/FX_Carry_Strategy_Cont/: AQMS_Utils.py  AQMS_Utils_Xtra.py  FX_Carry_Strategy_Cont.ipynb  NOK to USD Historical Exchage Rates.csv  SEK to USD Historical Exchage Rates.csv  g10_cbank_rates.csv  g10_rolled_futures_returns.csv  noksek_fwds
supp/data/equity_options/GOOGL_US_Equity/: metadata.csv
supp/data/equity_options/IWM_US_Equity/: metadata.csv
supp/data/equity_options/MSFT_US_Equity/: metadata.csv
supp/data/equity_options/SPY_US_Equity/: metadata.csv
